#2.15 Partials with Pug
block
extends
include

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
     head
+        link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", crossorigin="anonymous")
         title WeTube
     body
-        header 
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; WeTube
+        include ../partials/footer
