#2.16 Local Variables in Pug

--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", crossorigin="anonymous")
-        title WeTube
+        title #{siteName}
     body
         include ../partials/header
         main
