--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,6 +1,7 @@
 //- mixin은 pug의 함수이다. 기본적으로 인자 한개가 필요함
+//- html에서 반복되는 부분을 mixin으로 만든다
 mixin videoBlock(video = {})
     .videoBlock
-        video.videoBlock__thumbnail(src=video.videoFile)
+        video.videoBlock__thumbnail(src=video.videoFile, controls=true)
         h4.videoBlock__title= video.title
         h6.videoBlock__views= video.views
