--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -2,6 +2,7 @@
 //- html에서 반복되는 부분을 mixin으로 만든다
 mixin videoBlock(video = {})
     .videoBlock
-        video.videoBlock__thumbnail(src=video.videoFile, controls=true)
-        h4.videoBlock__title= video.title
-        h6.videoBlock__views= video.views
+        a(href=routes.videoDetail(video.id))
+            video.videoBlock__thumbnail(src=video.videoFile, controls=true)
+            h4.videoBlock__title= video.title
+            h6.videoBlock__views= video.views
