#3.6 Uploading and Creating a Video
install multer & use multer upload video

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -1,10 +1,10 @@
 extends layouts/main
 
 block content
-    .form-container
-        form(action=`${routes.videos}${routes.upload}`, method="post")
+    .form-container                                              /* enctype은 multer사용에 필요한 값 */
+        form(action=`${routes.videos}${routes.upload}` method="post"  enctype="multipart/form-data")
             label(for="file") Video File
-            input(type="file", id="file", name="file" required)
+            input(type="file", id="file", name="videoFile" required accept="video/*")
             input(type="text", placeholder="Title", name="title")
             textarea(name="description", placeholder="Description")
             input(type="submit", value="Upload Video")
