--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -8,3 +8,9 @@ block content
         h5.video__title= video.title
         span.video__views= video.views
         p.video__description= video.description
+    .video__comments
+        //- ⬇ 영상이 1개일때 s를 붙이지 않기 위해서 사용
+        if video.comments.length === 1
+            span.video__comments-number 1 comment
+        else
+            span.video__comments-number #{video.comments.length} comments
