--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,21 +1,22 @@
 header.header
-    .header__column
-        a(href=routes.home)
-            i.fab.fa-youtube  WeTube
-    .header__column
-        form(action=routes.search, method="get")
-            input(type="text", placeholder="Search by term...", name="term")
-    .header__column
-        ul
-            if !user.isAuthenticated
-                li
-                    a(href=routes.join) Join
-                li
-                    a(href=routes.login) Log In
-            else
-                li
-                    a(href=`${routes.videos}${routes.upload}`) Upload
-                li
-                    a(href=routes.userDetail(user.id)) User Detail
-                li
-                    a(href=routes.logout) Log Out
+    .header__wrapper
+        .header__column
+            a(href=routes.home)
+                i.fab.fa-youtube  WeTube
+        .header__column
+            form(action=routes.search, method="get")
+                input(type="text", placeholder="Search by term...", name="term")
+        .header__column
+            ul
+                if !user.isAuthenticated
+                    li
+                        a(href=routes.join) Join
+                    li
+                        a(href=routes.login) Log In
+                else
+                    li
+                        a(href=`${routes.videos}${routes.upload}`) Upload
+                    li
+                        a(href=routes.userDetail(user.id)) User Detail
+                    li
+                        a(href=routes.logout) Log Out
