#5.1 Footer, Login & Join

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,7 +2,8 @@ header.header
     .header__wrapper
         .header__column
             a(href=routes.home)
-                i.fab.fa-youtube  WeTube
+                i.fab.fa-youtube
+                    |  WeTube
         .header__column
             form(action=routes.search, method="get")
                 input(type="text", placeholder="Search by term...", name="term")
