--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,10 +9,22 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
 }
-
 main {
   width: 100%;
   max-width: 1400px;
   margin: 0 auto;
   min-height: 70vh;
+}
+button,
+input {
+  padding: 7px 10px;
+  width: 100%;
+  border-radius: 5px;
+  font-size: 14px;
+  color: $black;
+  font-weight: 600;
+  &::placeholder {
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.7);
+  }
 }
