--- a/views/upload.pug
+++ b/views/upload.pug
@@ -2,10 +2,11 @@ extends layouts/main
 
 block content
     .form-container
-        //- enctype는 multer에서 필요한 값
+        //- enctype는 multer에서 필요한 값. 동영상파일을 url로 변환
         form(action=`${routes.videos}${routes.upload}` method="post"  enctype="multipart/form-data") 
-            label(for="file") Video File
-            input(type="file", id="file", name="videoFile" required accept="video/*")
+            .fileUpload
+                label(for="file") Video File
+                input(type="file", id="file", name="videoFile" required accept="video/*")
             input(type="text", placeholder="Title", name="title")
             textarea(name="description", placeholder="Description")
             input(type="submit", value="Upload Video")
