--- a/assets/scss/config/reset.scss
+++ b/assets/scss/config/reset.scss
@@ -132,7 +132,8 @@ input {
   box-sizing: border-box;
 }
 button,
-input {
+input,
+textarea {
   border: none;
   box-sizing: border-box;
   &:focus,
