--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -7,9 +7,10 @@
     width: 100%;
     max-width: 320px;
     margin-bottom: 50px;
-    input {
-      display: block;
+    input:not([type="file"]),
+    .fileUpload {
       width: 100%;
+      display: block;
       padding-top: 10px;
       padding-bottom: 10px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -17,9 +18,26 @@
         margin-bottom: 25px;
       }
     }
+    textarea {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      margin-bottom: 25px;
+    }
     input[type="submit"] {
       background-color: #ff7675;
       color: white;
+    }
+  }
+  a {
+    max-width: 320px;
+    width: 100%;
+  }
+  .fileUpload {
+    label {
+      font-weight: 300;
+      margin-right: 10px;
+    }
+    input[type="file"] {
+      width: 200px;
     }
   }
 }
