--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -6,4 +6,5 @@ block content
             input(type="text", placeholder="Title", name="title" value=video.title required)
             textarea(name="description", placeholder="Description" required)= video.description
             input(type="submit", value="Update Video")
-        a.form-container__link.form-container__link--delete(href=routes.deleteVideo(video.id)) Delete Video
+        a.form-container__link(href=routes.deleteVideo(video.id))
+            button.delete Delete Video
