--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,16 +1,22 @@
 extends layouts/main
 
 block content
-    .video__player
-        video(src=`/${video.fileUrl}` controls=true)
-    .video__info
-        a(href=routes.editVideo(video.id)) Edit Video
-        h5.video__title= video.title
-        span.video__views= video.views
-        p.video__description= video.description
-    .video__comments
-        //- ⬇ 영상이 1개일때 s를 붙이지 않기 위해서 사용
-        if video.comments.length === 1
-            span.video__comments-number 1 comment
-        else
-            span.video__comments-number #{video.comments.length} comments
+    .videoDetail-container
+        .video__player
+            video(src=`/${video.fileUrl}` controls=true)
+        .video__info
+            a(href=routes.editVideo(video.id))
+                button Edit Video
+            h5.video__title= video.title
+            if video.views === 1
+                span.video__views 1 view
+            else
+                span.video__views #{video.views} views
+            span.video__dates #{video.createdAt.getFullYear()}. #{video.createdAt.getMonth()+1}. #{video.createdAt.getDate()}
+            p.video__description= video.description
+        .video__comments
+            //- ⬇ 영상이 1개일때 s를 붙이지 않기 위해서 사용
+            if video.comments.length === 1
+                span.video__comments-number 1 comment
+            else
+                span.video__comments-number #{video.comments.length} comments
