--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,8 +1,9 @@
 .social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        |Countinue with Github
+        a(href=routes.gitHub)
+            span
+                i.fab.fa-github
+            |Countinue with Github
     button.social-login--facebook
         span
             i.fab.fa-facebook
