#6.8 Github Log In part Three

--- a/assets/scss/partials/socialLogin.scss
+++ b/assets/scss/partials/socialLogin.scss
@@ -13,6 +13,9 @@
     &:not(:last-child) {
       margin-bottom: 15px;
     }
+    a {
+      color: white;
+    }
     span {
       margin-right: 10px;
       font-size: 20px;
