--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -9,7 +9,7 @@ header.header
                 input(type="text", placeholder="Search by term...", name="term")
         .header__column
             ul
-                if !user
+                if !loggedUser
                     li
                         a(href=routes.join) Join
                     li
@@ -18,6 +18,6 @@ header.header
                     li
                         a(href=`${routes.videos}${routes.upload}`) Upload
                     li
-                        a(href=routes.userDetail(user.id)) User Detail
+                        a(href=routes.me) User Detail
                     li
                         a(href=routes.logout) Log Out
