#6.10 User Detail + Facebook Login Part One

--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -5,6 +5,7 @@
                 i.fab.fa-github
             |Countinue with Github
     button.social-login--facebook
-        span
-            i.fab.fa-facebook
-        |Countinue with Facebook
+        a(href=routes.faceBook)
+            span
+                i.fab.fa-facebook
+            |Countinue with Facebook
