--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,6 +29,7 @@ textarea,
   color: $black;
   font-weight: 600;
   background-color: white;
+  max-width: 320px;
   resize: none;
   &::placeholder {
     font-weight: 300;
