--- a/views/changePassword.pug
+++ b/views/changePassword.pug
@@ -6,4 +6,4 @@ block content
             input(type="password", name="oldPasswod", placeholder="Current Password")
             input(type="password", name="newPassword", placeholder="New Password")
             input(type="password", name="newPassword1", placeholder="Verify New Password")
-            input(type="submit", value="Change Password") 
+            input(type="submit", value="🔑 Change Password") 
