--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,12 +1,14 @@
-@import "config/variables.scss"; /* sass파일에만 _를 붙인다 */
+@import "config/_variables.scss"; /* sass파일에만 _를 붙인다 */
 @import "config/reset.scss";
+@import "config/utils.scss";
 @import "main.scss";
-
+// partials
 @import "partials/header.scss";
 @import "partials/footer.scss";
 @import "partials/form.scss";
 @import "partials/socialLogin.scss";
 @import "partials/videoBlock.scss";
-
+// pages
 @import "pages/home.scss";
 @import "pages/videoDetail.scss";
+@import "pages/userDetail.scss";
