--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -8,6 +8,4 @@ block content
                 input(type="file", id="avatar", name="avatar")
             input(type="text", placeholder="Name", name="name")
             input(type="email", placeholder="Email", name="email")
-            input(type="submit", value="Update Profile")
-        a.form-container__link(href=`${routes.users}${routes.changePassword}`)
-            button Change Password
+            input(type="submit", value="🔄 Update Profile")
