--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -2,10 +2,11 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=`${routes.users}${routes.editProfile}`, method="post")
+        //- enctype는 multer에서 필요한 값. 이미지파일을 url로 변환
+        form(action=`${routes.users}${routes.editProfile}`, method="post" enctype="multipart/form-data")
             .fileUpload
                 label(for="avatar") Avatar
-                input(type="file", id="avatar", name="avatar")
-            input(type="text", placeholder="Name", name="name")
-            input(type="email", placeholder="Email", name="email")
+                input(type="file", id="avatar", name="avatar" accept="image/*")
+            input(type="text", placeholder="Name", name="name" value=loggedUser.name)
+            input(type="email", placeholder="Email", name="email" value=loggedUser.email)
             input(type="submit", value="🔄 Update Profile")
