--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -7,6 +7,6 @@ block content
             .fileUpload
                 label(for="avatar") Avatar
                 input(type="file", id="avatar", name="avatar" accept="image/*")
-            input(type="text", placeholder="Name", name="name" value=loggedUser.name)
-            input(type="email", placeholder="Email", name="email" value=loggedUser.email)
+            input(type="text", placeholder="Name", name="name" required value=loggedUser.name)
+            input(type="email", placeholder="Email", name="email" required value=loggedUser.email)
             input(type="submit", value="🔄 Update Profile")
