#7.3 Adding Creator to Video

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -5,8 +5,10 @@ block content
         .video__player
             video(src=`/${video.fileUrl}` controls=true)
         .video__info
-            a(href=routes.editVideo(video.id))
-                button Edit Video
+            if loggedUser
+                if video.creator.id === loggedUser.id
+                    a(href=routes.editVideo(video.id))
+                        button Edit Video
             h5.video__title= video.title
             if video.views === 1
                 span.video__views 1 view
@@ -14,6 +16,9 @@ block content
                 span.video__views #{video.views} views
             span.video__dates #{video.createdAt.getFullYear()}. #{video.createdAt.getMonth()+1}. #{video.createdAt.getDate()}
             p.video__description= video.description
+            .video__author
+                |Uploaded by 
+                a(href=routes.userDetail(video.creator.id))= video.creator.name
         .video__comments
             //- ⬇ 영상이 1개일때 s를 붙이지 않기 위해서 사용
             if video.comments.length === 1
