--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -5,9 +5,10 @@ block content
         .user-profile__header
             img.u-avatar(src=user.avatarUrl)
             h4.profile__username= user.name
-        if user.id === loggedUser.id
-            .user-profile__btns
-                a(href=`${routes.users}${routes.editProfile}`)
-                    button ✏️ Edit Profile
-                a(href=`${routes.users}${routes.changePassword}`)
-                    button 🔑 Change Password
+        if loggedUser
+            if user.id === loggedUser.id
+                .user-profile__btns
+                    a(href=`${routes.users}${routes.editProfile}`)
+                        button ✏️ Edit Profile
+                    a(href=`${routes.users}${routes.changePassword}`)
+                        button 🔑 Change Password
