#7.4 Protecting Video Routes
영상 썸네일이 안나오면 루트를 보고 다른지 확인해 봐라

--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -17,6 +17,11 @@
       width: 100px;
       margin-bottom: 25px;
     }
+    .video__author {
+      a {
+        color: #ff7675;
+      }
+    }
     .video__title,
     .video__views,
     .video__dates,
