--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -1,4 +1,5 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
     .user-profile
@@ -12,3 +13,14 @@ block content
                         button ✏️ Edit Profile
                     a(href=`${routes.users}${routes.changePassword}`)
                         button 🔑 Change Password
+        .home-videos
+            each item in user.videos
+                +videoBlock({
+                    id:item.id,
+                    title:item.title,
+                    views:item.views,
+                    /* Url 앞부분에 /를 붙여줌으로써 최상위 디렉토리를 지정해준다 */
+                    /* getMe로 가면 url이 정상이지만, userDetail로 가면 url에 /user가 붙어서 썸네일이 안나온다 */
+                    /* 시작루트가 달라서 생기는 문제 */
+                    videoFile:`/${item.fileUrl}`
+                })
