--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,14 +1,15 @@
 extends layouts/main
+include mixins/videoPlayer
 
 block content
     .videoDetail-container
-        .video__player
-            video(src=`/${video.fileUrl}` controls=true)
+        +videoPlayer({
+            src: `/${video.fileUrl}`
+        })
         .video__info
-            if loggedUser
-                if video.creator.id === loggedUser.id
-                    a(href=routes.editVideo(video.id))
-                        button Edit Video
+            if loggedUser && video.creator.id === loggedUser.id
+                a(href=routes.editVideo(video.id))
+                    button Edit Video
             h5.video__title= video.title
             if video.views === 1
                 span.video__views 1 view
