--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -6,21 +6,17 @@ block content
         .user-profile__header
             img.u-avatar(src=user.avatarUrl)
             h4.profile__username= user.name
-        if loggedUser
-            if user.id === loggedUser.id
-                .user-profile__btns
-                    a(href=`${routes.users}${routes.editProfile}`)
-                        button ✏️ Edit Profile
-                    a(href=`${routes.users}${routes.changePassword}`)
-                        button 🔑 Change Password
+        if loggedUser && user.id === loggedUser.id
+            .user-profile__btns
+                a(href=`${routes.users}${routes.editProfile}`)
+                    button ✏️ Edit Profile
+                a(href=`${routes.users}${routes.changePassword}`)
+                    button 🔑 Change Password
         .home-videos
             each item in user.videos
                 +videoBlock({
                     id:item.id,
                     title:item.title,
                     views:item.views,
-                    /* Url 앞부분에 /를 붙여줌으로써 최상위 디렉토리를 지정해준다 */
-                    /* getMe로 가면 url이 정상이지만, userDetail로 가면 url에 /user가 붙어서 썸네일이 안나온다 */
-                    /* 시작루트가 달라서 생기는 문제 */
-                    videoFile:`/${item.fileUrl}`
+                    videoFile:item.fileUrl
                 })
