#8.1 Play Pause Functionallity
비디오 재생버튼 생성

--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -4,7 +4,7 @@ include mixins/videoPlayer
 block content
     .videoDetail-container
         +videoPlayer({
-            src: `/${video.fileUrl}`
+            src: video.fileUrl
         })
         .video__info
             if loggedUser && video.creator.id === loggedUser.id
