--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,12 +3,14 @@ mixin videoPlayer(video={})
         video(src=`/${video.src}`)
         .videoPlayer__controls
             .videoPlayer__column
+                input.videoPlayer__volume#jsVolume(type="range" min="0" max="1" step="0.1" value="0.5")
+
                 span#jsVolumeButton
                     i.fas.fa-volume-up
                 span
-                    span#currentTime 00:00:00
+                    span#jsCurrentTime 00:00:00
                     |/ 
-                    span#totalTime 00:00:00
+                    span#jsTotalTime 00:00:00
             .videoPlayer__column
                 span#jsPlayButton
                     i.fas.fa-play
