--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,14 +3,13 @@ mixin videoPlayer(video={})
         video(src=`/${video.src}`)
         .videoPlayer__controls
             .videoPlayer__column
-                input.videoPlayer__volume#jsVolume(type="range" min="0" max="1" step="0.1" value="0.5")
-
                 span#jsVolumeButton
-                    i.fas.fa-volume-up
+                    i.fas.fa-volume-down
                 span
                     span#jsCurrentTime 00:00:00
-                    |/ 
+                    span   /  
                     span#jsTotalTime 00:00:00
+                input.videoPlayer__volume#jsVolume(type="range" min="0" max="1" step="0.1" value="0.5")
             .videoPlayer__column
                 span#jsPlayButton
                     i.fas.fa-play
