--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,6 +9,7 @@
 @import "partials/socialLogin.scss";
 @import "partials/videoBlock.scss";
 @import "partials/videoPlayer.scss";
+@import "partials/videoRecorder.scss";
 // pages
 @import "pages/home.scss";
 @import "pages/videoDetail.scss";
