--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -26,3 +26,8 @@ block content
                 span.video__comments-number 1 comment
             else
                 span.video__comments-number #{video.comments.length} comments
+            form.add__comment#jsAddComment
+                input(type="text" placeholder="Add a Comment")
+            ul.video__comments-list
+                each comment in video.comments
+                    span comment.text
