--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -48,5 +48,25 @@
     .video__comments-number {
       font-size: 18px;
     }
+    .add__comment {
+      margin-top: 25px;
+      width: 100%;
+      input {
+        width: 100%;
+      }
+    }
+    .video__comments-list {
+      margin-top: 50px;
+      li {
+        background-color: #ff7675;
+        color: white;
+        padding: 15px 20px;
+        border-radius: 15px;
+        border-top-left-radius: 0px;
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
+      }
+    }
   }
 }
