--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -30,4 +30,5 @@ block content
                 input(type="text" placeholder="Add a Comment")
             ul.video__comments-list
                 each comment in video.comments
-                    span comment.text
+                    li
+                        span= comment.text
