--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -23,12 +23,16 @@ block content
         .video__comments
             //- ⬇ 영상이 1개일때 s를 붙이지 않기 위해서 사용
             if video.comments.length === 1
-                span.video__comments-number 1 comment
+                span.video__comments-number
+                    span#jsCommentNumber 1
+                    |  comment
             else
-                span.video__comments-number #{video.comments.length} comments
+                span.video__comments-number
+                    span#jsCommentNumber= video.comments.length
+                    |  comments
             form.add__comment#jsAddComment
                 input(type="text" placeholder="Add a Comment")
-            ul.video__comments-list
-                each comment in video.comments
+            ul.video__comments-list#jsCommentList
+                each comment in video.comments.reverse()
                     li
                         span= comment.text
