--- a/src/views/userDetail.pug
+++ b/src/views/userDetail.pug
@@ -18,5 +18,5 @@ block content
                     id:item.id,
                     title:item.title,
                     views:item.views,
-                    videoFile:item.fileUrl
+                    src:item.fileUrl
                 })
